manifests-openshift/deploy-acmeair-flightservice-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-flightservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-flight-deployment
  template:
    metadata:
      labels:
        name: acmeair-flight-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-flightservice-java
        image: quay.io/mmondics/acmeair-flightservice-java-s390x:v1.0.0
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-flight-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-flight-deployment
---
##### Flight Database #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: acmeair-flight-db
  name: acmeair-flight-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: acmeair-flight-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-flight-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-flight-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: acmeair-flight-db
    spec:
      volumes:
        - name: acmeair-flight-db-1
          emptyDir: {}
        - name: acmeair-flight-db-2
          emptyDir: {}
      containers:
      - image: mongo:latest
        name: acmeair-flight-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: acmeair-flight-db-1
            mountPath: /data/configdb
          - name: acmeair-flight-db-2
            mountPath: /data/db
      restartPolicy: Always
status: {}
